--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 		<div class="sqr" id="sq7"></div>
 		<div class="sqr" id="sq8"></div>
 	</section>    
-	<button class="reset">Reset Button</button>
+	<button class="reset-btn">Reset Button</button>
 </body>
 </html>
